--- a/urbancare_final/Views/Shared/_Layout.cshtml
+++ b/urbancare_final/Views/Shared/_Layout.cshtml
@@ -44,25 +44,31 @@
                                     <a class="nav-link" asp-controller="User" asp-action="ViewAllComplaintsByUser">View Complaints By User</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">view profile</a>
+                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">View Profile</a>
                                 </li>
-                                @* <li class="nav-item">
-                                    
-                                </li> *@
                             }
                             else if (User.IsInRole("Department"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link" asp-controller="Department" asp-action="ViewComplaint">View Complaints</a>
                                 </li>
-                                @* <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="Edit">Edit Profile</a>
-                                </li> *@
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">view profile</a>
+                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">View Profile</a>
                                 </li>
                             }
+
+                            <!-- 🟩 Static section links -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Home/Index#features">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Home/Index#about">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Home/Index#contact">Contact</a>
+                            </li>
                         </ul>
+
                         <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
                             @Html.AntiForgeryToken()
                             <button type="submit" class="btn btn-outline-danger btn-sm">Logout</button>
