--- a/urbancare_final/Views/User/EditComplaint.cshtml
+++ b/urbancare_final/Views/User/EditComplaint.cshtml
@@ -17,6 +17,31 @@
     </div>
 
     <div class="mb-3">
+        <label asp-for="city" class="form-label"></label>
+        <input asp-for="city" class="form-control" />
+        <span asp-validation-for="city" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="pincode" class="form-label"></label>
+        <input asp-for="pincode" class="form-control" />
+        <span asp-validation-for="pincode" class="text-danger"></span>
+    </div>
+
+    @* <div class="mb-3">
+        <label asp-for="Latitude" class="form-label"></label>
+        <input asp-for="Latitude" class="form-control" />
+        <span asp-validation-for="Latitude" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Longitude" class="form-label"></label>
+        <input asp-for="Longitude" class="form-control" />
+        <span asp-validation-for="Longitude" class="text-danger"></span>
+    </div> *@
+
+
+    <div class="mb-3">
         <label asp-for="ProblemType" class="form-label"></label>
         <input asp-for="ProblemType" class="form-control" />
         <span asp-validation-for="ProblemType" class="text-danger"></span>
