--- a/urbancare_final/Views/Shared/_Layout.cshtml
+++ b/urbancare_final/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <!-- REMOVE or COMMENT OUT this block -->
+      
       
         @{
             var currentController = ViewContext.RouteData.Values["Controller"]?.ToString();
@@ -32,32 +32,6 @@
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            @if (User.IsInRole("Citizen"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="User" asp-action="MakeComplaint">Make Complaint</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="User" asp-action="ViewAllComplaints">All Complaints</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="User" asp-action="ViewAllComplaintsByUser">View Complaints By User</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">View Profile</a>
-                                </li>
-                            }
-                            else if (User.IsInRole("Department"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Department" asp-action="ViewComplaint">View Complaints</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">View Profile</a>
-                                </li>
-                            }
-
-                            <!-- 🟩 Static section links -->
                             <li class="nav-item">
                                 <a class="nav-link" href="/Home/Index#features">Features</a>
                             </li>
@@ -67,6 +41,33 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/Home/Index#contact">Contact</a>
                             </li>
+                            @if (User.IsInRole("Citizen"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="User" asp-action="MakeComplaint">File a Report</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="User" asp-action="ViewAllComplaints">All Reports</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="User" asp-action="ViewAllComplaintsByUser">User Issue List</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">Profile</a>
+                                </li>
+                            }
+                            else if (User.IsInRole("Department"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Department" asp-action="ViewComplaint">Reported Issues</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Home" asp-action="ViewProfile">Profile</a>
+                                </li>
+                            }
+
+                         
+                           
                         </ul>
 
                         <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
